Fix issue of link-3 going behind notification

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -32,6 +32,7 @@ body {
   margin: 10px;
   display: flex;
   justify-content: flex-start;
+  flex: 0 0 auto;
 }
 
 .logo {
